[project]
name = "pyretry"
version = "0.0.1"
authors = [
  { name="Daniel Fox", email="danudey@me.com" },
]
description = "A simple script to retry a command"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
]

[project.urls]
"Homepage" = "https://github.com/danudey/retry"
"Bug Tracker" = "https://github.com/danudey/retry/issues"
